# AshArchive

./: AGENT-RULES.md  CONTRIBUTING.md  README.md
ash-archive/: CHANGELOG.md  LICENSE.md  PROJECT-BIBLE.md  README.md  ROADMAP.md  pyproject.toml
ash-archive/editions/mwse/: CHANGELOG.md  MODLIST.md  README.md
ash-archive/editions/mwse/docs/: atmosphere-checklist.md  installation.md  known-issues.md  load-order-policy.md  performance.md  post-install.md  testing-checklist.md
ash-archive/editions/openmw/: MODLIST.md  README.md
ash-archive/shared/: categories.yaml  design-rules.md  meta-creation-wave-checklist.md  mo2-download-meta-sidecars.md  mod-evaluation-rubric.md  mod-meta-schema.md  naming-policy.md  source-triage.yaml  sourced-mod-workflow.md  sourced-mods.yaml  test-routes.md
ash-archive/shared/source-inputs/: README.md  modlist.txt
ash-archive/tests/: conftest.py  test_audit_modlist_source.py  test_compare_editions.py  test_control_meta_conventions.py  test_duplicate_mods.py  test_meta_filename_conventions.py  test_sourced_mods.py  test_validation.py  test_wabbajack_readiness.py
ash-archive/tests/fixtures/: invalid_modlist_missing_columns.txt  invalid_mods.yaml  invalid_sourced_mods.yaml  valid_modlist_source.txt  valid_sourced_mods.yaml
ash-archive/tools/: audit_modlist_source.py  check_duplicate_mods.py  check_wabbajack_readiness.py  compare_editions.py  generate_modlist_markdown.py  summarize_sourced_mods.py  validate_manifests.py
ash-archive/tools/lib/: __init__.py  manifest.py  markdown.py  paths.py  sourced_mods.py  validation.py  wabbajack.py
(+15 files in other folders)
